Revert "Made fileWatcher non blocking and added test"
This reverts commit fdffc8ce12d4ae3764951e0fb8cbd20d42b35aa5.